objects/Current_Conditions__c.object
<CustomObject>
    <fields>
        <fullName>Aggregate__c</fullName>
        <label>Aggregate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Property Ownership</fullName>
                </value>
                <value>
                    <fullName>Partner Evaluation</fullName>
                </value>
                <value>
                    <fullName>Property Evaluation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Applicant_Type__c</fullName>
        <inlineHelpText>Who is the applicant?</inlineHelpText>
        <label>Applicant Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Applicant</fullName>
                </value>
                <value>
                    <fullName>Co-Applicant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appraisal_Genesis__c</fullName>
        <description>Maps to Appraisal.Appraisal_Genesis__c</description>
        <label>Appraisal Genesis</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Greenlight Requested</fullName>
                </value>
                <value>
                    <fullName>IA Requested</fullName>
                </value>
                <value>
                    <fullName>Client Requested</fullName>
                </value>
                <value>
                    <fullName>Client Provided</fullName>
                </value>
                <value>
                    <fullName>Lender Provided</fullName>
                </value>
                <value>
                    <fullName>Unison Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <label>Assigned To:</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>TS</fullName>
                </value>
                <value>
                    <fullName>PS</fullName>
                </value>
                <value>
                    <fullName>Post Close Specialist</fullName>
                    <label>Post-Close Specialist</label>
                </value>
                <value>
                    <fullName>IM Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Test</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Requirements</relationshipLabel>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Requirement__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Application Package</fullName>
                </value>
                <value>
                    <fullName>Assets</fullName>
                </value>
                <value>
                    <fullName>Closing</fullName>
                </value>
                <value>
                    <fullName>Contracts</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Debt Reduction</fullName>
                </value>
                <value>
                    <fullName>Final Approval</fullName>
                </value>
                <value>
                    <fullName>HB Application Package</fullName>
                </value>
                <value>
                    <fullName>Home Condition</fullName>
                </value>
                <value>
                    <fullName>Income</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Investment Due Diligence</fullName>
                </value>
                <value>
                    <fullName>Liabilities</fullName>
                </value>
                <value>
                    <fullName>Lien</fullName>
                </value>
                <value>
                    <fullName>MAD</fullName>
                </value>
                <value>
                    <fullName>Misc</fullName>
                </value>
                <value>
                    <fullName>Mortgage</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Post-Closing</fullName>
                </value>
                <value>
                    <fullName>Property</fullName>
                    <label>Property Ownership</label>
                </value>
                <value>
                    <fullName>Rider</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Stage</fullName>
                    <label>Stage Tasks</label>
                </value>
                <value>
                    <fullName>Title</fullName>
                </value>
                <value>
                    <fullName>Unison Documents</fullName>
                </value>
                <value>
                    <fullName>Valuation</fullName>
                </value>
                <value>
                    <fullName>Verification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_of_uploaded_dmds__c</fullName>
        <label>Count of uploaded dmds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Description__c</fullName>
        <label>Customer Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DMA</label>
        <referenceTo>DMA__c</referenceTo>
        <relationshipLabel>Requirements</relationshipLabel>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Code__c</fullName>
        <label>Document Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_vs_External__c</fullName>
        <label>Internal vs External</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsReuploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reuploaded?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsReviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reviewed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Requirements (MRD)</relationshipLabel>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opp_Stage__c</fullName>
        <formula>Opportunity__r.Stage_readonly__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Current_Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Picklist__c</fullName>
        <label>Gate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Investment Due Diligence</fullName>
                </value>
                <value>
                    <fullName>Final Approval</fullName>
                </value>
                <value>
                    <fullName>Closing</fullName>
                </value>
                <value>
                    <fullName>Post Closing</fullName>
                    <label>Post-Closing</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prior__c</fullName>
        <label>Prior</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSI_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RSI Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSI_Letter_Text_Insert__c</fullName>
        <label>RSI Letter Text Insert</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requirement__c</fullName>
        <label>Requirement</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1099</fullName>
                </value>
                <value>
                    <fullName>Add Applicant to Title at Closing</fullName>
                </value>
                <value>
                    <fullName>Additional_Assets_Verification_Required</fullName>
                    <label>Additional Assets Verification Required</label>
                </value>
                <value>
                    <fullName>Additional lien information</fullName>
                    <label>Additional Lien Information</label>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Title holder application</fullName>
                    <label>Application Required for All Parties on Title</label>
                </value>
                <value>
                    <fullName>Appraisal - 1004D</fullName>
                </value>
                <value>
                    <fullName>Appraisal</fullName>
                    <label>Appraisal - 1st</label>
                </value>
                <value>
                    <fullName>Second Appraisal</fullName>
                    <label>Appraisal - 2nd</label>
                </value>
                <value>
                    <fullName>Appraisal - 3rd</fullName>
                </value>
                <value>
                    <fullName>Appraisal Desk Review</fullName>
                </value>
                <value>
                    <fullName>Asset Statement</fullName>
                </value>
                <value>
                    <fullName>Authorization to Share</fullName>
                </value>
                <value>
                    <fullName>CAP Completed</fullName>
                </value>
                <value>
                    <fullName>Certificate of Occupancy</fullName>
                </value>
                <value>
                    <fullName>Certified Documents</fullName>
                </value>
                <value>
                    <fullName>Change Vesting Type</fullName>
                </value>
                <value>
                    <fullName>Closing Documents</fullName>
                </value>
                <value>
                    <fullName>Closing Documents Executed</fullName>
                </value>
                <value>
                    <fullName>Condo rider executed</fullName>
                    <label>Condo Rider Executed</label>
                </value>
                <value>
                    <fullName>Credit Report</fullName>
                </value>
                <value>
                    <fullName>Credit Supplement</fullName>
                </value>
                <value>
                    <fullName>Death Certificate</fullName>
                </value>
                <value>
                    <fullName>Disability Award Letter</fullName>
                </value>
                <value>
                    <fullName>Divorce Decree</fullName>
                </value>
                <value>
                    <fullName>DMA Required</fullName>
                </value>
                <value>
                    <fullName>Employment Offer Letter</fullName>
                </value>
                <value>
                    <fullName>Escrow Holdback for Item that Must</fullName>
                    <label>Escrow Holdback for Item that Must be Repaired</label>
                </value>
                <value>
                    <fullName>Estimated Settlement Statement</fullName>
                </value>
                <value>
                    <fullName>Final Hazard Insurance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reupload_Comments__c</fullName>
        <label>Reupload Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Document Received, In progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Document Ready for Review</fullName>
                    <label>Ready to Review</label>
                </value>
                <value>
                    <fullName>Waived</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Success_Factor_Type__c</fullName>
        <formula>TEXT(Success_Factor__r.Success_Factor__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Success Factor Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success_Factor__c</fullName>
        <label>Success Factor</label>
        <referenceTo>Success_Factor__c</referenceTo>
        <relationshipLabel>Requirements</relationshipLabel>
        <relationshipName>Requirements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Task_Completion_Status__c</fullName>
        <formula>IF(  Tasks_Cleared_Count__c =  Total_Tasks__c,

IMAGE ( "/img/samples/light_green.gif", "All Cleared"),

IF (  Tasks_Cleared_Count__c=0,

IMAGE ( "/img/samples/light_red.gif", "Not Started"), 

IMAGE ( "/img/samples/light_yellow.gif", "In Progress")))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Completion Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tasks_Cleared_Count__c</fullName>
        <label>Tasks Cleared Count</label>
        <summaryFilterItems>
            <field>Project_Task__c.Status__c</field>
            <operation>equals</operation>
            <value>Waived, Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Project_Task__c.Requirement__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Tasks__c</fullName>
        <label>Total Tasks</label>
        <summaryForeignKey>Project_Task__c.Requirement__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Trade_Account_ID__c</fullName>
        <description>Trade Account ID</description>
        <formula>Trade_Account__r.LASERCA__Account_Identifier__c</formula>
        <inlineHelpText>Trade Account ID</inlineHelpText>
        <label>Trade Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trade_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This provides the trade account related to the stipulation</description>
        <inlineHelpText>This provides the trade account related to the stipulation</inlineHelpText>
        <label>Trade Account</label>
        <referenceTo>LASERCA__Trade_Accounts__c</referenceTo>
        <relationshipLabel>Requirements</relationshipLabel>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Data Request or Stipulation</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Requirement__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Data Request</fullName>
                </value>
                <value>
                    <fullName>Stipulation</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UW_Description__c</fullName>
        <label>UW Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Update_Children_Tasks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Children Tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <label>Requirement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Requirements</fullName>
        <columns>NAME</columns>
        <columns>Success_Factor__c</columns>
        <columns>Status__c</columns>
        <columns>Category__c</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <label>My Requirements</label>
    </listViews>
    <nameField>
        <displayFormat>REQ-{00000000}</displayFormat>
        <label>Requirement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Appraisal_Genesis_Required_for_Appr_2_3</fullName>
        <active>true</active>
        <description>If 2nd and 3rd Requirements are created, Appraisal Genesis is required</description>
        <errorConditionFormula>ISPICKVAL( Appraisal_Genesis__c, "")
&amp;&amp;
OR((ISPICKVAL( Requirement__c ,'Appraisal - 2nd')),(ISPICKVAL( Requirement__c,'Appraisal - 3rd')))</errorConditionFormula>
        <errorMessage>Please enter Appraisal Genesis</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Moving_Req_Status_to_In_Progress</fullName>
        <active>false</active>
        <description>Requirement status cannot be changed to In Progress if Success Factor is completed</description>
        <errorConditionFormula>OR( ISPICKVAL(Success_Factor__r.Status__c, "Completed") , 
ISPICKVAL( Status__c , "In Progress"))</errorConditionFormula>
        <errorMessage>Must move Success Factor status to "In Progress" before moving the Requirement status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_Field_Required</fullName>
        <active>true</active>
        <description>Reason field is required to elaborate on these requirements:
- Escrow Holdback for Item that Must be Repaired
- Must pay outstanding judgements
- Other</description>
        <errorConditionFormula>ISBLANK(Reason__c)
&amp;&amp;
ISPICKVAL(Requirement__c, "Escrow Holdback for Item that Must be Repaired")</errorConditionFormula>
        <errorDisplayField>Reason__c</errorDisplayField>
        <errorMessage>Reason field required. Specify item needing repairs.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_cant_be_complete_if_tasks_incomplete</fullName>
        <active>true</active>
        <description>Requirement status cannot be changed to In Progress if Success Factor is completed</description>
        <errorConditionFormula>ISCHANGED(Status__c) &amp;&amp;
Tasks_Cleared_Count__c  &lt;&gt;  Total_Tasks__c &amp;&amp; 
ISPICKVAL(Status__c, "Completed")</errorConditionFormula>
        <errorMessage>Cannot complete Requirement. There are outstanding Tasks.</errorMessage>
    </validationRules>
</CustomObject>